fix(backend): refine compare endpoint and response mapping