@@ -1,16 +1,18 @@
 package com.acme.f1ranker.controller;
 
 import com.acme.f1ranker.controller.dto.CompareResponseDto;
+import com.acme.f1ranker.domain.engine.Normalizer;
+import com.acme.f1ranker.domain.model.DriverFeatures;
+import com.acme.f1ranker.domain.model.NormalizedFeatures;
 import com.acme.f1ranker.service.CompareService;
 import jakarta.validation.constraints.Size;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 import org.springframework.validation.annotation.Validated;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 @Validated
 @RestController
@@ -18,6 +20,7 @@ import org.springframework.web.bind.annotation.RestController;
 public class CompareController {
 
     private final CompareService compareService;
+    private final Normalizer normalizer = new Normalizer();
 
     public CompareController(CompareService compareService) {
         this.compareService = compareService;
@@ -35,14 +38,35 @@ public class CompareController {
 
         var result = compareService.compare(driverIds, from, to);
 
+        // collect features list (already sorted by CompareService)
+        List<DriverFeatures> featuresList = result.ranking().stream()
+                .map(CompareService.RankedFeatures::features)
+                .toList();
+
+        List<NormalizedFeatures> normalized = normalizer.normalize(featuresList);
+        Map<String, NormalizedFeatures> normById = normalized.stream()
+                .collect(Collectors.toMap(NormalizedFeatures::driverId, Function.identity()));
+
         List<CompareResponseDto.RankingEntryDto> ranking = result.ranking().stream()
-                .map(r -> new CompareResponseDto.RankingEntryDto(
-                        r.rank(),
-                        r.stats().driverId(),
-                        r.stats().races(),
-                        r.stats().wins(),
-                        r.stats().podiums()
-                ))
+                .map(r -> {
+                    DriverFeatures f = r.features();
+                    NormalizedFeatures n = normById.get(f.driverId());
+
+                    return new CompareResponseDto.RankingEntryDto(
+                            r.rank(),
+                            f.driverId(),
+                            f.races(),
+                            f.wins(),
+                            f.podiums(),
+                            f.dnfs(),
+                            f.winRate(),
+                            f.podiumRate(),
+                            f.dnfRate(),
+                            n.winRateNorm(),
+                            n.podiumRateNorm(),
+                            n.dnfRateNorm()
+                    );
+                })
                 .toList();
 
         return new CompareResponseDto(result.fromSeason(), result.toSeason(), ranking);
@@ -53,6 +77,6 @@ public class CompareController {
                 .map(String::trim)
                 .filter(s -> !s.isEmpty())
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
     }
 }
